[WIP] Regenerate api docs and add middlewares
